# agentcore_launchpad

./: .gitignore  CLAUDE.md  Makefile  README.md  README.zh-CN.md  prompt.md  start.py  stop.sh
backend/: pyproject.toml
backend/app/: main.py
backend/scripts/: deploy_frontdesk_agent.py  e2e_chat_memory.py  e2e_claude_sdk.py  e2e_eval_extended.py  e2e_eval_run.py  e2e_experiment.py  e2e_gateway_policy_management.py  e2e_gateway_tool.py  e2e_golden_path.py  e2e_harness.py  e2e_kb_gateway.py  e2e_knowledge_base.py  e2e_observability.py  e2e_policy.py  e2e_registry.py  e2e_runtime_canary.py  e2e_traces.py  e2e_zip_runtime.py  refresh_a2a_cards.py
backend/tests/: conftest.py  test_a2a_agent.py  test_a2a_demo.py  test_agent_skills_attach.py  test_agent_spec_filesystem.py  test_agentcore_client.py  test_agents_api.py  test_auth.py  test_bootstrap.py  test_chat_api.py  test_claude_sdk_template.py  test_codegen_fix.py  test_config.py  test_container_provision_iam.py  test_container_skill_bundle.py  test_container_streaming.py  test_conversations.py  test_errors.py  test_gateway.py  test_governance.py  test_governance_gateways.py  test_governance_policy_lifecycle.py  test_governance_policy_wrapper.py  test_governance_registry_import.py  test_governance_router_contracts.py  test_harness_convert.py  test_harness_deployer.py  test_health.py  test_invoke_canary_route.py  test_knowledge_kb.py  test_local_exec.py  test_memory_scoping.py  test_model_prices.py  test_observability.py  test_overview.py  test_pipeline.py  test_registry.py  (+13 more)
infra/: app.py  cdk.json  pyproject.toml
(+457 files in other folders)
