[project]
name = "launchpad-infra"
version = "0.1.0"
description = "AgentCore Launchpad — shared AWS infrastructure (CDK)"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.150,<3",
    "constructs>=10.0,<11",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
